--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Welcome To DevOps Training In Telugu Batch 22 By Sreeharsha Veerapalli</h1>
-	<h1>Testing Packer Images</h1>
+	<h1>Testing Packer Imagess</h1>
 	<div id="smallcont">
 		<div></div>
 		<div id="try1">Lets Play</div>
