--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Welcome To DevOps Training In Telugu Batch 22 By Sreeharsha Veerapalli</h1>
-	<h1>Testing Packer Imagess</h1>
+	<h1>Welcome To DevOps Training In Telugu Batch 22</h1>
+	<h1>Testing Terraform Classic Pipelines</h1>
 	<div id="smallcont">
 		<div></div>
 		<div id="try1">Lets Play</div>
